--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="danger">#C84138</color>
+    <color name="warning">#F0C242</color>
     <color name="yellowProgress">#f5c330</color>
     <color name="greenSuccess">#43A047</color>
     <color name="bluePrimary">#23629F</color>
