--- a/app/src/main/res/layout/activity_data_perkawinan_edit.xml
+++ b/app/src/main/res/layout/activity_data_perkawinan_edit.xml
@@ -57,7 +57,7 @@
                     android:layout_marginEnd="24dp"
                     android:layout_marginRight="24dp"
                     android:fontFamily="@font/sourcesanspro_bold"
-                    android:text="Ras"
+                    android:text="Perkawinan"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="30sp"
