--- a/app/src/main/res/layout/activity_scan_result.xml
+++ b/app/src/main/res/layout/activity_scan_result.xml
@@ -19,31 +19,248 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:clipToPadding="false"
+            android:orientation="vertical"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:id="@+id/tv_nodata"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="15dp"
+                android:layout_marginVertical="15dp"
+                android:layout_gravity="center"
+                android:text="Tidak ada data"
+                android:fontFamily="@font/sourcesanspro_semibold"
+                android:textSize="16sp"
+                android:gravity="center"
+                android:visibility="gone"/>
+
+            <TableLayout
+                android:id="@+id/tl_scan_result"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingVertical="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginBottom="10dp"
+                android:orientation="vertical"
+                android:padding="10dp"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/rc_white"
+                android:visibility="gone">
+                <TextView
+                    android:id="@+id/tv_inst_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="title"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:fontFamily="@font/sourcesanspro_bold"
+                    android:gravity="center"/>
+
+                <TableRow>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Necktag"
+                        android:layout_marginStart="10dp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/sourcesanspro_semibold"/>
+                    <TextView
+                        android:id="@+id/tv_inst_necktag"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="necktag"
+                        android:layout_marginStart="24dp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/sourcesanspro_regular"/>
+                </TableRow>
+
+                <TableRow>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Jenis Kelamin"
+                        android:layout_marginStart="10dp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/sourcesanspro_semibold"/>
+                    <TextView
+                        android:id="@+id/tv_inst_jk"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="jk"
+                        android:layout_marginStart="24dp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/sourcesanspro_regular"/>
+                </TableRow>
+
+                <TableRow>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Ras"
+                        android:layout_marginStart="10dp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/sourcesanspro_semibold"/>
+                    <TextView
+                        android:id="@+id/tv_inst_ras"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="ras"
+                        android:layout_marginStart="24dp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/sourcesanspro_regular"/>
+                </TableRow>
+
+                <TableRow>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Tanggal Lahir"
+                        android:layout_marginStart="10dp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/sourcesanspro_semibold"/>
+                    <TextView
+                        android:id="@+id/tv_inst_tgl_lahir"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="tgl lahir"
+                        android:layout_marginStart="24dp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/sourcesanspro_regular"/>
+                </TableRow>
+
+                <TableRow>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Blood"
+                        android:layout_marginStart="10dp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/sourcesanspro_semibold"/>
+                    <TextView
+                        android:id="@+id/tv_inst_blood"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="blood"
+                        android:layout_marginStart="24dp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/sourcesanspro_regular"/>
+                </TableRow>
+
+                <TableRow>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Peternakan"
+                        android:layout_marginStart="10dp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/sourcesanspro_semibold"/>
+                    <TextView
+                        android:id="@+id/tv_inst_peternakan"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="peternakan"
+                        android:layout_marginStart="24dp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/sourcesanspro_regular"/>
+                </TableRow>
+
+                <TableRow>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Ayah"
+                        android:layout_marginStart="10dp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/sourcesanspro_semibold"/>
+                    <TextView
+                        android:id="@+id/tv_inst_ayah"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="ayah"
+                        android:layout_marginStart="24dp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/sourcesanspro_regular"/>
+                </TableRow>
+
+                <TableRow
+                    android:layout_marginBottom="10dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Ibu"
+                        android:layout_marginStart="10dp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/sourcesanspro_semibold"/>
+                    <TextView
+                        android:id="@+id/tv_inst_ibu"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="ibu"
+                        android:layout_marginStart="24dp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/sourcesanspro_regular"/>
+                </TableRow>
+            </TableLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:elevation="5dp">
+                android:elevation="5dp"
+                android:layout_marginBottom="10dp">
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv"
+                    android:id="@+id/rv_parent"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    tools:listitem="@layout/row_family"/>
-                <TextView
-                    android:id="@+id/tv_nodata"
+                    tools:listitem="@layout/row_instance"/>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_sibling"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="15dp"
-                    android:layout_marginVertical="15dp"
-                    android:layout_gravity="center"
-                    android:text="Tidak ada data"
-                    android:fontFamily="@font/sourcesanspro_semibold"
-                    android:textSize="16sp"
-                    android:gravity="center"
-                    android:visibility="gone"/>
+                    android:layout_height="match_parent"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/row_instance"/>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_child"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/row_instance"/>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_gparent"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/row_instance"/>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_gchild"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/row_instance"/>
             </RelativeLayout>
         </LinearLayout>
     </ScrollView>
