--- a/app/src/main/res/layout/activity_match.xml
+++ b/app/src/main/res/layout/activity_match.xml
@@ -76,8 +76,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:layout_marginTop="18dp"
                 android:layout_marginEnd="24dp"
+                android:layout_marginTop="15dp"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
+                android:paddingTop="6dp"
+                android:paddingBottom="6dp"
                 android:background="@drawable/rc_teal_accent"
                 app:errorEnabled="true"
                 app:helperTextTextColor="@color/danger"
@@ -87,7 +91,6 @@
                     android:id="@+id/tiet_match_jantan"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="12dp"
                     android:clickable="false"
                     android:cursorVisible="false"
                     android:focusable="false"
@@ -101,6 +104,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="12dp"
+                android:layout_marginBottom="12dp"
                 android:src="@drawable/ic_add_black_24dp"
                 android:background="@color/float_transparent"/>
 
@@ -109,8 +113,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:layout_marginTop="18dp"
                 android:layout_marginEnd="24dp"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
+                android:paddingTop="6dp"
+                android:paddingBottom="6dp"
                 android:background="@drawable/rc_teal_accent"
                 app:errorEnabled="true"
                 app:helperTextTextColor="@color/danger"
@@ -120,7 +127,6 @@
                     android:id="@+id/tiet_match_betina"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="12dp"
                     android:clickable="false"
                     android:cursorVisible="false"
                     android:focusable="false"
@@ -134,7 +140,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Lihat"
-                android:layout_marginTop="18dp"
+                android:layout_marginTop="20dp"
                 android:layout_gravity="center"
                 android:background="@drawable/rc_primary"/>
 
