--- a/app/src/main/res/layout/activity_peternak_detail.xml
+++ b/app/src/main/res/layout/activity_peternak_detail.xml
@@ -21,7 +21,7 @@
             android:layout_height="match_parent">
 
             <TableLayout
-                android:id="@+id/tl_detail_peternakan"
+                android:id="@+id/tl_detail_peternak"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
