--- a/app/src/main/res/layout/fragment_grafik.xml
+++ b/app/src/main/res/layout/fragment_grafik.xml
@@ -7,6 +7,17 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
+    <Spinner
+        android:id="@+id/spinner_chart"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:spinnerMode="dropdown"
+        android:visibility="gone"/>
+
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/bar_chart1"
         android:layout_width="match_parent"
@@ -23,6 +34,7 @@
 
     <com.github.mikephil.charting.charts.CombinedChart
         android:id="@+id/combined_chart1"
+        android:layout_below="@id/spinner_chart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
@@ -30,6 +42,7 @@
 
     <com.github.mikephil.charting.charts.CombinedChart
         android:id="@+id/combined_chart2"
+        android:layout_below="@id/spinner_chart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
