--- a/app/src/main/res/layout/activity_laporan.xml
+++ b/app/src/main/res/layout/activity_laporan.xml
@@ -54,15 +54,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp">
+            android:orientation="vertical">
 
             <Button
-                android:id="@+id/btn_barcode_laporan"
+                android:id="@+id/btn_laporan_download"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
                 android:paddingHorizontal="20dp"
                 android:paddingVertical="10dp"
                 android:drawableLeft="@drawable/ic_file_download"
@@ -79,6 +79,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="14dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
                 android:text="Rentang Waktu"
                 android:fontFamily="@font/sourcesanspro_regular"
                 android:textSize="18sp"
@@ -89,6 +91,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
                 android:paddingHorizontal="20dp"
                 android:paddingVertical="10dp"
                 android:drawableLeft="@drawable/ic_access_time"
@@ -104,7 +108,9 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp">
                 <TextView
                     android:id="@+id/tv_start_date"
                     android:layout_width="wrap_content"
@@ -142,6 +148,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="14dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
                 android:text="LAPORAN - DATA TERNAK"
                 android:fontFamily="@font/sourcesanspro_regular"
                 android:textSize="18sp"
@@ -152,26 +160,34 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginTop="10dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
                 android:background="@color/tealAccent">
                 <Spinner
                     android:id="@+id/spinner_laporan"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:spinnerMode="dropdown"
-                    android:padding="8dp"/>
+                    android:padding="12dp"/>
             </LinearLayout>
 
             <HorizontalScrollView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:scrollbars="horizontal|vertical"
-                android:layout_marginTop="6dp">
-                <TableLayout
-                    android:id="@+id/tl_laporan"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/colorPrimary">
-                </TableLayout>
+                android:clipToPadding="false">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:nestedScrollingEnabled="false"
+                    tools:listitem="@layout/row_table_ternak"/>
             </HorizontalScrollView>
 
         </LinearLayout>
