update login and firebase

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,6 +41,7 @@
                 android:background="@drawable/rc_white"
                 android:fontFamily="@font/sourcesanspro_regular"
                 android:hint="email"
+                android:inputType="textEmailAddress"
                 android:textSize="18sp" />
 
             <EditText
