--- a/app/src/main/res/layout/activity_laporan.xml
+++ b/app/src/main/res/layout/activity_laporan.xml
@@ -143,7 +143,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="8dp"
-                android:background="@color/black"/>
+                android:background="@color/black"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"/>
 
             <TextView
                 android:layout_width="match_parent"
